# manga-panel-split

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/test-url-to-panels/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
subflows/url-to-panels/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/download-image/: __init__.py  task.oo.yaml
tasks/extract-comic-panels/: __init__.py  task.oo.yaml
